Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30293

mariabackup fail with --galera-info option with Non-Galera cluster MariaDB servers

    XMLWordPrintable

Details

    Description

      User with appropriate privileges failed to backup non-galera MariaDB server while using option --galera-info.

      KB says :- https://mariadb.com/kb/en/mariabackup-options/#-galera-info If the server is not a Galera Cluster node, then this option has no effect. But it does affect mariabackup , backup keeps failing for all CS.

      *Test case :- *

      Server version: 10.3.30-MariaDB MariaDB Server
      Server version: 10.4.19-MariaDB MariaDB Server
      Server version: 10.5.18-MariaDB MariaDB Server
      Server version: 10.6.11-MariaDB MariaDB Server
      Server version: 10.7.7-MariaDB MariaDB Server

       
      [root@mariadb_stand backup]# mariabackup -u root --galera-info  --backup --target_dir=/tmp/backup/ > /tmp/backup/output.log 2>&1
       
      [root@mariadb_stand backup]# tail -3 output.log
      [00] 2022-12-21 13:25:12 Failed to get master wsrep state from SHOW STATUS.
      mariabackup: Stopping log copying thread.[00] 2022-12-21 13:25:12 >> log scanned up to (1626148)
       
      [root@mariadb_stand backup]# mariabackup -u mariabackup -pMaria@128807 --backup --galera-info --target_dir=/tmp/backup/ > /tmp/backup/output.log 2>&1
       
      [root@mariadb_stand backup]# tail -3 output.log
      [00] 2022-12-21 13:25:29 Failed to get master wsrep state from SHOW STATUS.
      mariabackup: Stopping log copying thread.[00] 2022-12-21 13:25:29 >> log scanned up to (1626364)
      
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            pramod.mahto@mariadb.com Pramod Mahto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.