MDEV-30293: mariabackup fail with --galera-info option without Galera

Without Galera, mariabackup should ignore the --galera-info option
and not fail with rc != 0 like it does now. This commit fixes this flaw.